[Fix] spring properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.app.ayofit.model
 
 # mapper 로그레벨 설정
-logging.level.com.ayomock.ayofit.mapper=TRACE
+logging.level.com.app.ayofit.mapper=TRACE
