--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/unitless": "^0.8.1",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -17,7 +19,10 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-progress": "^5.0.0",
+    "react-native-svg": "^13.11.0",
+    "react-native-vector-icons": "^10.0.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
