--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -19,8 +19,11 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-progress": "^5.0.0",
-    "react-native-svg": "^13.11.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7"
   },
