--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -9,14 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mohamadkh75/react-native-jalali-datepicker": "^1.1.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
-    "expo": "~49.0.6",
+    "@react-navigation/native-stack": "^6.9.13",
+    "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-customize-selected-date": "^1.0.1",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.0.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.0",
+    "styled-components": "^6.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
