--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -17,13 +16,12 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "expo": "~49.0.6",
+    "expo-blur": "~12.4.1",
     "expo-camera": "~13.4.2",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-pager-view": "6.2.0",
-    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
