--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.3.2",
     "@expo-google-fonts/open-sans": "^0.2.3",
+    "@react-native-community/blur": "^4.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -20,12 +20,6 @@
     "expo": "~49.0.6",
     "expo-camera": "~13.4.2",
     "expo-image-picker": "~14.3.2",
-    "react-native-pager-view": "6.2.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-tab-view": "^3.5.2",
-    "styled-components": "^6.0.7",
     "expo-linear-gradient": "~12.3.0",
     "expo-sensors": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
@@ -33,8 +27,17 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-onboard": "^2.5.12",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
