--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -21,6 +21,7 @@
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-customize-selected-date": "^1.0.1",
     "react-native-date-picker": "^4.2.13",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
