--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/datetimepicker": "^7.4.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -29,6 +28,8 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-onboard": "^2.5.12",
     "react-native-onboarding-swiper": "^1.2.0",
@@ -36,7 +37,6 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
