Merge후 실행 정상적으로 되는것 확인후 보존용 첫커밋, 지갑 부트안에 넣고 기존주소 이름 줄여주고 gitignore로 안올라가게 하기 설정

--- a/.gitignore
+++ b/.gitignore
@@ -909,3 +909,5 @@ google-services.json
 
 # End of https://www.toptal.com/developers/gitignore/api/java,node,reactnative,eclipse,intellij+iml
 
+
+/Wallet_C44M4IT64ZKKEISA
