--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -33,6 +33,7 @@
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-onboard": "^2.5.12",
@@ -44,10 +45,11 @@
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
