--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -28,6 +28,9 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-onboard": "^2.5.12",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "6.2.0",
