--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Oracle
 # ojdbc 연결
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@C44M4IT64ZKKEISA_high?TNS_ADMIN=./Wallet_C44M4IT64ZKKEISA
+spring.datasource.url=jdbc:oracle:thin:@C44M4IT64ZKKEISA_high?TNS_ADMIN=C:/jsw_sbt7/finalDB/Wallet_C44M4IT64ZKKEISA
 spring.datasource.username=ADMIN
 spring.datasource.password=Soldesk802!!
 
