--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -22,11 +22,13 @@
     "expo": "~49.0.6",
     "expo-blur": "~12.4.1",
     "expo-camera": "~13.4.2",
+    "expo-cli": "^6.3.10",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-sensors": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-task-manager": "~11.3.0",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-native": "0.72.3",
