--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -29,7 +29,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -49,7 +49,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-constants": "~14.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
