--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -31,7 +31,7 @@
     "expo-task-manager": "~11.3.0",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -51,7 +51,10 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-permissions": "~14.2.1",
+    "expo-notifications": "~0.20.1",
+    "expo-background-fetch": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
