--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -23,6 +23,7 @@
     "expo-blur": "~12.4.1",
     "expo-camera": "~13.4.2",
     "expo-cli": "^6.3.10",
+    "expo-constants": "~14.4.2",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-sensors": "~12.3.0",
@@ -51,8 +52,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7",
-    "yarn": "^1.22.19",
-    "expo-constants": "~14.4.2"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
