[Feat] recordMain 사진 등록 기능 ing

--- a/src/main/ayofront/app.json
+++ b/src/main/ayofront/app.json
@@ -28,6 +28,7 @@
       [
         "expo-image-picker",
         {
+          "cameraPermission": "The app accesses your camera to let you share them with your friends.",
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
