--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -20,11 +20,14 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "expo": "~49.0.6",
+    "expo-background-fetch": "~11.3.0",
     "expo-blur": "~12.4.1",
     "expo-camera": "~13.4.2",
     "expo-cli": "^6.3.10",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-notifications": "~0.20.1",
+    "expo-permissions": "~14.2.1",
     "expo-sensors": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -37,6 +40,7 @@
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-onboard": "^2.5.12",
@@ -51,10 +55,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7",
-    "yarn": "^1.22.19",
-    "expo-permissions": "~14.2.1",
-    "expo-notifications": "~0.20.1",
-    "expo-background-fetch": "~11.3.0"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
