--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -31,23 +31,27 @@
     "expo-task-manager": "~11.3.0",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-charts": "^1.3.2",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-onboard": "^2.5.12",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "6.2.0",
     "react-native-progress": "^5.0.0",
+    "react-native-pure-chart": "^0.0.24",
     "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.12.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7",
