--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -55,7 +55,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.7",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-secure-store": "~12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
