--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -61,6 +61,7 @@
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
+    "rn-swipe-button": "^1.3.8",
     "styled-components": "^6.0.7",
     "yarn": "^1.22.19"
   },
