--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -21,11 +21,15 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "expo": "~49.0.6",
+    "expo-app-loading": "^2.1.1",
+    "expo-application": "~5.3.0",
+    "expo-auth-session": "~5.0.2",
     "expo-background-fetch": "~11.3.0",
     "expo-blur": "~12.4.1",
     "expo-camera": "~13.4.2",
     "expo-cli": "^6.3.10",
     "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-notifications": "~0.20.1",
@@ -35,8 +39,11 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-task-manager": "~11.3.0",
+    "expo-web-browser": "~12.3.2",
+    "formik": "^2.4.3",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
@@ -61,9 +68,9 @@
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6",
     "rn-swipe-button": "^1.3.8",
-    "styled-components": "^6.0.7",
-    "yarn": "^1.22.19"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
