[Fix] SearchModal 컴포넌트 재활용 작업전 백업용 커밋

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 
   #Oracle DB 연결
   datasource:
-    url: jdbc:oracle:thin:@C44M4IT64ZKKEISA_high?TNS_ADMIN=./Wallet_ayofit
+    url: jdbc:oracle:thin:@C44M4IT64ZKKEISA_high?TNS_ADMIN=/Users/sanghyunkim/Oracle_instantclient10_1/Wallet_C44M4IT64ZKKEISA
     username: ADMIN
     password: Soldesk802!!
     driverClassName: oracle.jdbc.OracleDriver
