--- a/src/main/ayofront/app.json
+++ b/src/main/ayofront/app.json
@@ -12,15 +12,22 @@
       "resizeMode": "contain",
       "backgroundColor": "#FFB172"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.app.ayofit"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./images/ayofit-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.app.ayofit"
     },
     "web": {
       "favicon": "./images/ayofit-favicon.png"
