--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -70,8 +70,7 @@
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "rn-swipe-button": "^1.3.8",
-    "styled-components": "^6.0.7",
-    "expo-system-ui": "~2.4.0"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
