--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   #Oracle DB 연결
   datasource:
     #local
-    url: jdbc:oracle:thin:@C44M4IT64ZKKEISA_medium?TNS_ADMIN=./Wallet_ayofit
+    url: jdbc:oracle:thin:@C44M4IT64ZKKEISA_medium?TNS_ADMIN=/Users/sanghyunkim/Oracle_instantclient10_1/Wallet_C44M4IT64ZKKEISA
     #server
     #url: jdbc:oracle:thin:@C44M4IT64ZKKEISA_medium?TNS_ADMIN=/home/ubuntu/Wallet
     username: ADMIN
