--- a/src/main/ayofront/app.json
+++ b/src/main/ayofront/app.json
@@ -12,7 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#FFB172"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.app.ayofit"
@@ -22,7 +24,9 @@
         "foregroundImage": "./images/ayofit-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": ["android.permission.RECORD_AUDIO"],
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
       "package": "com.app.ayofit"
     },
     "web": {
@@ -37,6 +41,11 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "3e992d95-daff-40e0-bee2-dc6a81c98e7b"
+      }
+    }
   }
 }
