--- a/src/main/ayofront/package.json
+++ b/src/main/ayofront/package.json
@@ -71,7 +71,8 @@
     "react-native-web": "~0.19.6",
     "rn-swipe-button": "^1.3.8",
     "styled-components": "^6.0.7",
-    "expo-system-ui": "~2.4.0"
+    "expo-system-ui": "~2.4.0",
+    "expo-dev-client": "~2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
